# rms

./: .env  Cargo.toml
src/: config.rs  db.rs  error.rs  main.rs  state.rs
src/entities/: activity.rs  building.rs  maintenance.rs  mod.rs  notice.rs  payment.rs  session.rs  unit.rs  user.rs
src/handlers/: auth.rs  home.rs  mod.rs  users.rs
src/handlers/admin/: dashboard.rs
src/handlers/caretaker/: dashboard.rs
src/handlers/landlord/: buildings.rs  dashboard.rs  mod.rs  unit.rs  utils.rs
src/handlers/tenant/: dashboard.rs  mod.rs  mpesa_callback.rs  notice.rs  payment.rs  payments.rs  request.rs
src/repositories/: activity_repo.rs  building_repo.rs  maintenance_repo.rs  mod.rs  notice_repo.rs  payment_repo.rs  unit_repo.rs  user_repo.rs
src/server/: auth.rs  form.rs  mod.rs  request.rs  response.rs  router.rs  static_files.rs
src/services/: mod.rs  mpesa_services.rs  unit_services.rs  user_service.rs
src/services/caretaker/: dashboard_services.rs
src/services/landlord/: building_service.rs  dashboard_service.rs  mod.rs  unit_service.rs
src/services/tenant/: dashboard_services.rs  mod.rs
src/templates/: engine.rs
src/templates/views/: index.html
static/css/: admin.css  caretaker.css  index.css  landlord.css  shared.css  tenant.css
static/css/landlord_pages/: building.css  buildings.css  pages.css  shared.css  unit.css
static/js/: main.js
static/js/ui/: authModalState.js  buildingModalState.js  formState.js  profileModalState.js  tenantModalState.js  unitModalState.js
static/js/validation/: authForms.js  buildingForm.js  paymentForm.js  (+5 more)
(+8 files in other folders)
